--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,1 +1,37 @@
-/* No CSS *//*# sourceMappingURL=styles.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  border: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+button {
+  background: transparent;
+  cursor: pointer;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+html,
+body {
+  overflow-x: hidden;
+}
+
+.container {
+  width: 100%;
+  max-width: 124.8rem;
+  padding: 0 1.6rem;
+  margin: 0 auto;
+}
+/*# sourceMappingURL=styles.css.map */
