--- a/scss/styles.css
+++ b/scss/styles.css
@@ -153,4 +153,66 @@ h1, h2, h3, h4 {
   font-weight: 600;
   font-size: 1.6rem;
 }
+
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #0073ce;
+  width: 100%;
+  height: 8.8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 5.9rem;
+}
+
+header nav ul li:not(:first-child) {
+  margin-left: 4.8rem;
+}
+
+header nav ul li a {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 125%;
+  color: #ffffff;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+header nav ul li a:hover {
+  color: #ffc800;
+}
 /*# sourceMappingURL=styles.css.map */
