--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -2,10 +2,10 @@ header {
   position: absolute;
   top: 0;
   left: 0;
-  background: #0073ce;
   width: 100%;
   height: 8.8rem;
   display: flex;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 
   .container {
     @include flex(row, center, space-between);
