--- a/scss/styles.css
+++ b/scss/styles.css
@@ -158,12 +158,12 @@ header {
   position: absolute;
   top: 0;
   left: 0;
-  background: #0073ce;
   width: 100%;
   height: 8.8rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 }
 
 header .container {
@@ -214,5 +214,143 @@ header nav ul li a {
 
 header nav ul li a:hover {
   color: #ffc800;
+}
+
+.s-hero {
+  width: 100%;
+  height: 78.6rem;
+  background: url("../../img/bg-hero.svg") no-repeat center center;
+  padding-top: 17.5rem;
+}
+
+.s-hero .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.s-hero .text {
+  width: 100%;
+  max-width: 68.4rem;
+}
+
+.s-hero .text h3 {
+  font-weight: 600;
+  color: #ffffff;
+  opacity: 0.8;
+  margin-bottom: 3.2rem;
+}
+
+.s-hero .text h1 {
+  color: #ffffff;
+  margin-bottom: 3.9rem;
+}
+
+.s-hero .text ul {
+  margin-top: 6.4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  max-width: 62.1rem;
+}
+
+.s-hero .text ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.s-hero .text ul li .icon {
+  width: 48px;
+  height: 48px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(53, 202, 226, 0.4)), to(rgba(53, 202, 226, 0)));
+  background: linear-gradient(180deg, rgba(53, 202, 226, 0.4) 0%, rgba(53, 202, 226, 0) 100%);
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 1.2rem;
+}
+
+.s-hero .text ul li span {
+  font-size: 1.8rem;
+  line-height: 2.2rem;
+  color: #ffffff;
+}
+
+.s-hero .area-image {
+  width: 100%;
+  max-width: 70.6rem;
+  margin-right: -17.4rem;
+}
+
+.s-hero .area-image h2 {
+  margin-bottom: 6.7rem;
+  text-align: center;
+  font-weight: 600;
+  color: #ffffff;
+  opacity: 0.4;
+}
+
+.s-hero .area-image .image {
+  position: relative;
+  top: 3.2rem;
+  width: 100%;
+  height: 54.1rem;
+}
+
+.s-hero .area-image .image img {
+  position: absolute;
+}
+
+.s-hero .area-image .image .card-front {
+  top: 4.1rem;
+  left: 0;
+  z-index: 2;
+}
+
+.s-hero .area-image .image .card-back {
+  bottom: 4.6rem;
+  right: 8.6rem;
+  z-index: 1;
+}
+
+.s-hero .area-image .image .circle {
+  top: 2.8rem;
+  right: 4.3rem;
 }
 /*# sourceMappingURL=styles.css.map */
