--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -97,3 +97,193 @@
     }
   }
 }
+
+.s-card-neon {
+  padding-top: 12.9rem;
+
+  .container {
+    @include flex(row, flex-start, space-between);
+  }
+
+  .left-area {
+    width: 100%;
+    max-width: 27.7rem;
+
+    .ilustra-mockup {
+      position: relative;
+      width: 100%;
+      max-width: 27.7rem;
+      margin-bottom: 12.9rem;
+
+      .circle {
+        position: absolute;
+        z-index: -1;
+        top: 8.7rem;
+        right: 11.4rem;
+        max-width: 377px;
+      }
+    }
+
+    .text {
+      width: 100%;
+      @include flex(column, center, center);
+
+      .icon {
+        position: relative;
+
+        &:before {
+          content: "";
+          width: 5px;
+          height: 83px;
+          position: absolute;
+          top: -104px;
+          left: 50%;
+          margin-left: -2.5px;
+          background: url(../../img/points.svg) no-repeat center center;
+        }
+      }
+
+      .info-text {
+        @include flex(column, center, center);
+
+        h3 {
+          text-align: center;
+          margin-top: 3.6rem;
+        }
+
+        p {
+          text-align: center;
+          font-size: 1.6rem;
+          line-height: 150%;
+          color: $gray-400;
+          opacity: 0.8;
+          margin-bottom: 2.6rem;
+        }
+
+        ul {
+          li {
+            &:not(:last-child) {
+              margin-bottom: 1.3rem;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .right-area {
+    width: 100%;
+    max-width: 80rem;
+
+    .main-text {
+      margin-bottom: 14.4rem;
+
+      h2 {
+        max-width: 48.8rem;
+        color: $gray-600;
+        margin-bottom: 4.9rem;
+      }
+
+      ul {
+        margin-bottom: 3.2rem;
+
+        li {
+          @include flex(row, center, space-between);
+          border-bottom: 1px solid rgba(225, 224, 231, 0.9);
+          padding: 3.3rem 0;
+
+          &:first-child {
+            padding-top: 0;
+          }
+
+          .info {
+            display: flex;
+            align-items: center;
+
+            .txt {
+              margin-left: 4.3rem;
+
+              h3 {
+                color: $gray-400;
+              }
+
+              p {
+                font-size: 18px;
+                line-height: 150%;
+                color: $gray-300;
+              }
+            }
+          }
+        }
+      }
+
+      .btn {
+        position: relative;
+        display: inline-block;
+        font-family: "Poppins", sans-serif;
+        font-weight: 500;
+        font-size: 1.6rem;
+        line-height: 112%;
+        letter-spacing: -0.05rem;
+        color: $brand-blue;
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          right: -1.8rem;
+          width: 10px;
+          height: 3px;
+          background-color: $brand-yellow;
+        }
+      }
+    }
+
+    .box-card {
+      width: 100%;
+      height: 41rem;
+      background: url(../../img/bg-box-card-neon.svg) no-repeat center center;
+      border: 12px;
+      @include flex(row, center, space-between);
+      padding-left: 5.9rem;
+
+      .text {
+        width: 100%;
+        max-width: 38rem;
+
+        h2 {
+          color: $white;
+          margin-bottom: 1.1rem;
+        }
+
+        h3 {
+          color: $white;
+          max-width: 32.7rem;
+          margin-bottom: 0.8rem;
+        }
+
+        p {
+          font-size: 1.6rem;
+          line-height: 150%;
+          color: $white;
+          margin-bottom: 3.1rem;
+        }
+
+        .btns {
+          display: flex;
+          align-items: center;
+
+          button {
+            &:not(:first-child) {
+              margin-left: 1.6rem;
+            }
+          }
+        }
+      }
+
+      .image {
+        margin-right: -3.1rem;
+      }
+    }
+  }
+}
