--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -297,6 +297,8 @@
       margin-bottom: 4rem;
 
       h2 {
+        color: $gray-600;
+
         span {
           display: block;
           color: $gray-200;
@@ -330,6 +332,93 @@
 
     .slider-testimonials {
       overflow: hidden;
+    }
+  }
+}
+
+.s-digital-account {
+  padding: 12.7rem 0 8.5rem;
+
+  .container {
+    display: flex;
+    align-items: center;
+
+    .text {
+      max-width: 54.2rem;
+
+      h2 {
+        color: $gray-600;
+        margin-bottom: 4.5rem;
+
+        span {
+          display: block;
+          color: rgba(198, 197, 206, 0.8);
+          margin-bottom: 0.9rem;
+        }
+      }
+
+      ul {
+        margin-bottom: 6.1rem;
+
+        li {
+          display: flex;
+          align-items: center;
+
+          &:not(:last-child) {
+            margin-bottom: 4.5rem;
+          }
+
+          .icon {
+            width: 4.5rem;
+            height: 4.5rem;
+            background: #00d7d7;
+            border-radius: 8px;
+            @include flex(row, center, center);
+            margin-right: 2.6rem;
+          }
+
+          .info {
+            h4 {
+              margin-bottom: 0.4rem;
+              color: $gray-400;
+            }
+
+            p {
+              font-size: 1.8rem;
+              line-height: 150%;
+              color: $gray-300;
+            }
+          }
+        }
+      }
+    }
+
+    .image {
+      position: relative;
+      width: 100%;
+      max-width: 71.2rem;
+      height: 59.8rem;
+      margin-right: -3.8rem;
+      left: 12.5rem;
+
+      img {
+        position: absolute;
+
+        &.mockup-01 {
+          top: 7.8rem;
+          left: 0;
+        }
+
+        &.mockup-02 {
+          top: 0;
+          left: 25.4rem;
+        }
+
+        &.circle {
+          bottom: 0;
+          right: 0;
+        }
+      }
     }
   }
 }
