--- a/scss/styles.css
+++ b/scss/styles.css
@@ -216,6 +216,183 @@ header nav ul li a:hover {
   color: #ffc800;
 }
 
+footer {
+  background: #0073ce;
+  padding-top: 4.9rem;
+}
+
+footer .container .top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 1px solid rgba(73, 196, 253, 0.2);
+  padding-bottom: 4.8rem;
+  margin-bottom: 5.7rem;
+}
+
+footer .container .top .share {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer .container .top .share span {
+  font-size: 1.4rem;
+  line-height: 125%;
+  color: #ffffff;
+  opacity: 0.7;
+}
+
+footer .container .top .share ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 3rem;
+}
+
+footer .container .top .share ul li:not(:first-child) {
+  margin-left: 3rem;
+}
+
+footer .container .main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 1px solid rgba(73, 196, 253, 0.2);
+  padding-bottom: 6.2rem;
+  margin-bottom: 3.9rem;
+}
+
+footer .container .main nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  max-width: 86rem;
+}
+
+footer .container .main nav .item strong {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  color: #ffffff;
+  display: inline-block;
+  margin-bottom: 2.5rem;
+}
+
+footer .container .main nav .item ul li:not(:last-child) {
+  margin-bottom: 2.9rem;
+}
+
+footer .container .main nav .item ul li a {
+  font-size: 1.4rem;
+  line-height: 1.7rem;
+  color: #ffffff;
+  opacity: 0.7;
+}
+
+footer .container .main .btns {
+  width: 100%;
+  max-width: 280px;
+}
+
+footer .container .main .btns button {
+  background: rgba(0, 164, 240, 0.23);
+  border-radius: 6px;
+  width: 28rem;
+  height: 7.6rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 2.5rem;
+}
+
+footer .container .main .btns button:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+footer .container .main .btns button .info {
+  margin-left: 2.4rem;
+  font-size: 1.4rem;
+  line-height: 150%;
+  color: #ffffff;
+}
+
+footer .container .main .btns button .info strong {
+  display: block;
+  text-align: left;
+  font-weight: bold;
+}
+
+footer .container .main .btns button .info span {
+  display: block;
+}
+
+footer .container .mensagem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  border-bottom: 4px solid #ffc800;
+  padding-bottom: 3.4rem;
+}
+
+footer .container .mensagem .icon {
+  font-size: 1.8rem;
+}
+
+footer .container .mensagem p {
+  width: 100%;
+  max-width: 66rem;
+  margin-left: 2.5rem;
+  font-size: 1.4rem;
+  line-height: 150%;
+  color: #ffffff;
+  opacity: 0.8;
+}
+
 .s-hero {
   width: 100%;
   height: 78.6rem;
