--- a/scss/partials/_reset.scss
+++ b/scss/partials/_reset.scss
@@ -17,8 +17,17 @@ button {
   background: transparent;
   cursor: pointer;
 }
+
 html {
   font-size: 62.5%;
+
+  @include responsive(1300px) {
+    font-size: 58%;
+  }
+
+  @include responsive(991px) {
+    font-size: 62.5%;
+  }
 }
 
 html,
