--- a/scss/partials/_titles.scss
+++ b/scss/partials/_titles.scss
@@ -1,6 +1,14 @@
 h1 {
   font-weight: 600;
   font-size: 6.4rem;
+
+  @include responsive(1050px) {
+    font-size: 5.2rem;
+  }
+
+  @include responsive(991px) {
+    font-size: 4.8rem;
+  }
 }
 
 h2 {
@@ -18,17 +26,22 @@ h4 {
   line-height: 112%;
 }
 
-h1, h2 {
+h1,
+h2 {
   line-height: 112%;
   letter-spacing: -0.1rem;
 }
 
-h3, h4 {
+h3,
+h4 {
   font-weight: 500;
   letter-spacing: -0.05rem;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-family: "Poppins", sans-serif;
   color: $gray-500;
 }
