--- a/scss/styles.css
+++ b/scss/styles.css
@@ -962,7 +962,7 @@ footer .container .mensagem p {
   width: 100%;
   height: 41rem;
   background: url(../../img/bg-box-card-neon.svg) no-repeat center center;
-  border: 12px;
+  border-radius: 12px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1017,6 +1017,191 @@ footer .container .mensagem p {
 
 .s-card-neon .right-area .box-card .image {
   margin-right: -3.1rem;
+}
+
+@media (max-width: 1200px) {
+  .s-card-neon .left-area .ilustra-mockup .circle {
+    display: none;
+  }
+  .s-card-neon .right-area {
+    max-width: 73rem;
+  }
+  .s-card-neon .right-area .main-text ul li .info .txt {
+    margin-left: 2rem;
+  }
+  .s-card-neon .right-area .box-card {
+    padding-left: 3.5rem;
+  }
+  .s-card-neon .right-area .box-card .image {
+    margin-right: -1rem;
+  }
+}
+
+@media (max-width: 991px) {
+  .s-card-neon .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .s-card-neon .right-area {
+    max-width: 100%;
+    margin-bottom: 9.8rem;
+  }
+  .s-card-neon .right-area .main-text {
+    margin-bottom: 5.7rem;
+  }
+  .s-card-neon .right-area .main-text h2 {
+    text-align: center;
+    margin: 0 auto 5.3rem;
+    font-size: 3.6rem;
+  }
+  .s-card-neon .right-area .main-text .btn {
+    display: block;
+    text-align: center;
+  }
+  .s-card-neon .right-area .main-text .btn::after {
+    display: none;
+  }
+  .s-card-neon .right-area .box-card {
+    max-width: 94.7%;
+  }
+  .s-card-neon .right-area .box-card .image {
+    margin-right: -4rem;
+  }
+  .s-card-neon .left-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    max-width: 61rem;
+    margin: 0 auto;
+  }
+  .s-card-neon .left-area .ilustra-mockup {
+    max-width: 25.5rem;
+    margin-bottom: 0;
+  }
+  .s-card-neon .left-area .text {
+    max-width: 27rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .s-card-neon {
+    padding-top: 16.9rem;
+  }
+  .s-card-neon .right-area .box-card {
+    max-width: 100%;
+    height: 47rem;
+    background-size: cover;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 4.3rem;
+    padding-left: 0;
+    margin-bottom: 4rem;
+  }
+  .s-card-neon .right-area .box-card .text {
+    max-width: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 3rem;
+    text-align: center;
+  }
+  .s-card-neon .right-area .box-card .image {
+    margin: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .s-card-neon {
+    position: relative;
+    padding-top: 8.6rem;
+  }
+  .s-card-neon::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 214px;
+    bottom: 0;
+    left: 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f7f7fa), to(rgba(247, 247, 250, 0)));
+    background: linear-gradient(180deg, #f7f7fa 0%, rgba(247, 247, 250, 0) 100%);
+    -webkit-transform: matrix(1, 0, 0, -1, 0, 0);
+            transform: matrix(1, 0, 0, -1, 0, 0);
+    z-index: -1;
+  }
+  .s-card-neon .right-area {
+    margin-bottom: 6.7rem;
+  }
+  .s-card-neon .right-area .main-text h2 {
+    font-size: 2.8rem;
+    margin-bottom: 3.7rem;
+  }
+  .s-card-neon .right-area .main-text ul li {
+    padding: 2.8rem 0;
+  }
+  .s-card-neon .right-area .main-text ul li .info {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .s-card-neon .right-area .main-text ul li .info .txt {
+    max-width: 71%;
+  }
+  .s-card-neon .right-area .main-text ul li .info .txt h3 {
+    font-size: 2rem;
+  }
+  .s-card-neon .right-area .main-text ul li .info .txt p {
+    font-size: 14px;
+  }
+  .s-card-neon .right-area .box-card h2 {
+    font-weight: 600;
+    font-size: 2.8rem;
+  }
+  .s-card-neon .right-area .box-card h3 {
+    font-size: 2rem;
+  }
+  .s-card-neon .right-area .box-card .text p {
+    max-width: 25.3rem;
+    margin-bottom: 3.4rem;
+  }
+  .s-card-neon .right-area .box-card .text .btns .btn-primary {
+    padding: 0 3rem;
+  }
+  .s-card-neon .right-area .box-card .image {
+    max-width: 27.7rem;
+  }
+  .s-card-neon .left-area {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .s-card-neon .left-area .text {
+    margin-bottom: 4rem;
+  }
+  .s-card-neon .left-area .text .icon::before {
+    display: none;
+  }
+  .s-card-neon .left-area .ilustra-mockup {
+    height: 39.7rem;
+    overflow: hidden;
+  }
 }
 
 .s-testimonials {
@@ -1182,5 +1367,6 @@ footer .container .mensagem p {
 .s-digital-account .container .image img.circle {
   bottom: 0;
   right: 0;
+  z-index: -1;
 }
 /*# sourceMappingURL=styles.css.map */
