--- a/scss/partials/_components.scss
+++ b/scss/partials/_components.scss
@@ -1,6 +1,7 @@
 .card-testimonial {
   width: 100%;
   max-width: 38.4rem;
+  height: 21.6rem;
   background: rgba(241, 240, 245, 0.55);
   border-radius: 8px;
   padding: 3.7rem 3.2rem 2.3rem;
@@ -23,5 +24,13 @@
     font-size: 1.8rem;
     line-height: 150%;
     color: $gray-400;
+  }
+
+  @include responsive(991px) {
+    height: 25.6rem;
+  }
+
+  @include responsive(480px) {
+    height: 29.6rem;
   }
 }
