chore: adjust responsive section digital account

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1331,26 +1331,26 @@ footer .container .mensagem p {
           align-items: center;
 }
 
-.s-digital-account .container .text {
+.s-digital-account .text {
   max-width: 54.2rem;
 }
 
-.s-digital-account .container .text h2 {
+.s-digital-account .text h2 {
   color: #33303e;
   margin-bottom: 4.5rem;
 }
 
-.s-digital-account .container .text h2 span {
+.s-digital-account .text h2 span {
   display: block;
   color: rgba(198, 197, 206, 0.8);
   margin-bottom: 0.9rem;
 }
 
-.s-digital-account .container .text ul {
+.s-digital-account .text ul {
   margin-bottom: 6.1rem;
 }
 
-.s-digital-account .container .text ul li {
+.s-digital-account .text ul li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1359,11 +1359,11 @@ footer .container .mensagem p {
           align-items: center;
 }
 
-.s-digital-account .container .text ul li:not(:last-child) {
+.s-digital-account .text ul li:not(:last-child) {
   margin-bottom: 4.5rem;
 }
 
-.s-digital-account .container .text ul li .icon {
+.s-digital-account .text ul li .icon {
   width: 4.5rem;
   height: 4.5rem;
   background: #00d7d7;
@@ -1384,18 +1384,18 @@ footer .container .mensagem p {
   margin-right: 2.6rem;
 }
 
-.s-digital-account .container .text ul li .info h4 {
+.s-digital-account .text ul li .info h4 {
   margin-bottom: 0.4rem;
   color: #5f5c6b;
 }
 
-.s-digital-account .container .text ul li .info p {
+.s-digital-account .text ul li .info p {
   font-size: 1.8rem;
   line-height: 150%;
   color: #7a7786;
 }
 
-.s-digital-account .container .image {
+.s-digital-account .image {
   position: relative;
   width: 100%;
   max-width: 71.2rem;
@@ -1404,23 +1404,134 @@ footer .container .mensagem p {
   left: 12.5rem;
 }
 
-.s-digital-account .container .image img {
+.s-digital-account .image img {
   position: absolute;
 }
 
-.s-digital-account .container .image img.mockup-01 {
+.s-digital-account .image img.mockup-01 {
   top: 7.8rem;
   left: 0;
 }
 
-.s-digital-account .container .image img.mockup-02 {
+.s-digital-account .image img.mockup-02 {
   top: 0;
   left: 25.4rem;
 }
 
-.s-digital-account .container .image img.circle {
+.s-digital-account .image img.circle {
   bottom: 0;
   right: 0;
   z-index: -1;
+}
+
+@media (max-width: 1200px) {
+  .s-digital-account .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .s-digital-account .text {
+    max-width: 75%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .s-digital-account .text h2 {
+    text-align: center;
+    max-width: 80%;
+  }
+  .s-digital-account .image {
+    margin-top: 5rem;
+    margin-right: 0;
+    left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .s-digital-account {
+    padding-top: 8.6rem;
+    padding-bottom: 8.1rem;
+  }
+  .s-digital-account .text {
+    max-width: 100%;
+  }
+  .s-digital-account .image {
+    max-width: 58.2rem;
+    height: 63.3rem;
+  }
+  .s-digital-account .image img.circle {
+    width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .s-digital-account {
+    padding-top: 5.7rem;
+    padding-bottom: 7.2rem;
+  }
+  .s-digital-account .text h2 {
+    font-size: 2.6rem;
+    font-weight: 600;
+    max-width: 100%;
+    margin-bottom: 3.9rem;
+  }
+  .s-digital-account .text h2 span {
+    font-size: 2.4rem;
+  }
+  .s-digital-account .text ul {
+    margin-bottom: 4.4rem;
+  }
+  .s-digital-account .text ul li {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  .s-digital-account .text ul li:not(:last-child) {
+    margin-bottom: 5.6rem;
+  }
+  .s-digital-account .text ul li .icon {
+    margin-right: 0;
+    margin-bottom: 1.6rem;
+  }
+  .s-digital-account .text ul li .info h4 {
+    max-width: 28rem;
+  }
+  .s-digital-account .text ul li .info p {
+    font-size: 1.4rem;
+    max-width: 21rem;
+    margin: 0 auto;
+  }
+  .s-digital-account .image {
+    max-width: 35.7rem;
+    height: 46.9rem;
+  }
+  .s-digital-account .image img.mockup-01, .s-digital-account .image img.mockup-02 {
+    max-width: 16.8rem;
+  }
+  .s-digital-account .image img.mockup-01 {
+    bottom: initial;
+    top: 5.8rem;
+  }
+  .s-digital-account .image img.mockup-02 {
+    left: initial;
+    top: 0;
+    right: 0;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
