--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -785,51 +785,174 @@
   .container {
     display: flex;
     align-items: center;
+  }
+
+  .text {
+    max-width: 54.2rem;
+
+    h2 {
+      color: $gray-600;
+      margin-bottom: 4.5rem;
+
+      span {
+        display: block;
+        color: rgba(198, 197, 206, 0.8);
+        margin-bottom: 0.9rem;
+      }
+    }
+
+    ul {
+      margin-bottom: 6.1rem;
+
+      li {
+        display: flex;
+        align-items: center;
+
+        &:not(:last-child) {
+          margin-bottom: 4.5rem;
+        }
+
+        .icon {
+          width: 4.5rem;
+          height: 4.5rem;
+          background: #00d7d7;
+          border-radius: 8px;
+          @include flex(row, center, center);
+          margin-right: 2.6rem;
+        }
+
+        .info {
+          h4 {
+            margin-bottom: 0.4rem;
+            color: $gray-400;
+          }
+
+          p {
+            font-size: 1.8rem;
+            line-height: 150%;
+            color: $gray-300;
+          }
+        }
+      }
+    }
+  }
+
+  .image {
+    position: relative;
+    width: 100%;
+    max-width: 71.2rem;
+    height: 59.8rem;
+    margin-right: -3.8rem;
+    left: 12.5rem;
+
+    img {
+      position: absolute;
+
+      &.mockup-01 {
+        top: 7.8rem;
+        left: 0;
+      }
+
+      &.mockup-02 {
+        top: 0;
+        left: 25.4rem;
+      }
+
+      &.circle {
+        bottom: 0;
+        right: 0;
+        z-index: -1;
+      }
+    }
+  }
+
+  @include responsive(1200px) {
+    .container {
+      flex-direction: column;
+      align-items: center;
+    }
 
     .text {
-      max-width: 54.2rem;
+      max-width: 75%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
       h2 {
-        color: $gray-600;
-        margin-bottom: 4.5rem;
+        text-align: center;
+        max-width: 80%;
+      }
+    }
+
+    .image {
+      margin-top: 5rem;
+      margin-right: 0;
+      left: 0;
+    }
+  }
+
+  @include responsive(991px) {
+    padding-top: 8.6rem;
+    padding-bottom: 8.1rem;
+
+    .text {
+      max-width: 100%;
+    }
+
+    .image {
+      max-width: 58.2rem;
+      height: 63.3rem;
+
+      img {
+        &.circle {
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  @include responsive(480px) {
+    padding-top: 5.7rem;
+    padding-bottom: 7.2rem;
+
+    .text {
+      h2 {
+        font-size: 2.6rem;
+        font-weight: 600;
+        max-width: 100%;
+        margin-bottom: 3.9rem;
 
         span {
-          display: block;
-          color: rgba(198, 197, 206, 0.8);
-          margin-bottom: 0.9rem;
+          font-size: 2.4rem;
         }
       }
 
       ul {
-        margin-bottom: 6.1rem;
+        margin-bottom: 4.4rem;
 
         li {
-          display: flex;
+          flex-direction: column;
           align-items: center;
+          text-align: center;
 
           &:not(:last-child) {
-            margin-bottom: 4.5rem;
+            margin-bottom: 5.6rem;
           }
 
           .icon {
-            width: 4.5rem;
-            height: 4.5rem;
-            background: #00d7d7;
-            border-radius: 8px;
-            @include flex(row, center, center);
-            margin-right: 2.6rem;
+            margin-right: 0;
+            margin-bottom: 1.6rem;
           }
 
           .info {
             h4 {
-              margin-bottom: 0.4rem;
-              color: $gray-400;
+              max-width: 28rem;
             }
 
             p {
-              font-size: 1.8rem;
-              line-height: 150%;
-              color: $gray-300;
+              font-size: 1.4rem;
+              max-width: 21rem;
+              margin: 0 auto;
             }
           }
         }
@@ -837,30 +960,24 @@
     }
 
     .image {
-      position: relative;
-      width: 100%;
-      max-width: 71.2rem;
-      height: 59.8rem;
-      margin-right: -3.8rem;
-      left: 12.5rem;
+      max-width: 35.7rem;
+      height: 46.9rem;
 
       img {
-        position: absolute;
+        &.mockup-01,
+        &.mockup-02 {
+          max-width: 16.8rem;
+        }
 
         &.mockup-01 {
-          top: 7.8rem;
-          left: 0;
+          bottom: initial;
+          top: 5.8rem;
         }
 
         &.mockup-02 {
+          left: initial;
           top: 0;
-          left: 25.4rem;
-        }
-
-        &.circle {
-          bottom: 0;
           right: 0;
-          z-index: -1;
         }
       }
     }
