feat: add animations with aos animate

--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -65,8 +65,7 @@
       margin-bottom: 6.7rem;
       text-align: center;
       font-weight: 600;
-      color: $white;
-      opacity: 0.4;
+      color: rgba(255, 255, 255, 0.4);
     }
 
     .image {
