--- a/scss/styles.css
+++ b/scss/styles.css
@@ -684,8 +684,7 @@ footer .message p {
   margin-bottom: 6.7rem;
   text-align: center;
   font-weight: 600;
-  color: #ffffff;
-  opacity: 0.4;
+  color: rgba(255, 255, 255, 0.4);
 }
 
 .s-hero .area-image .image {
