feat: add animations with keyframes

--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -83,6 +83,7 @@
         left: 0;
         z-index: 2;
         max-width: 43.5rem;
+        animation: floating 6s infinite;
       }
 
       .card-back {
@@ -90,6 +91,7 @@
         right: 8.6rem;
         z-index: 1;
         max-width: 35.2rem;
+        animation: floating 6s infinite 1s;
       }
 
       .circle {
