--- a/scss/styles.css
+++ b/scss/styles.css
@@ -236,6 +236,7 @@ header {
   display: -ms-flexbox;
   display: flex;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  z-index: 5;
 }
 
 header .container {
@@ -270,6 +271,10 @@ header nav ul {
   margin-right: 5.9rem;
 }
 
+header nav ul li {
+  position: relative;
+}
+
 header nav ul li:not(:first-child) {
   margin-left: 4.8rem;
 }
@@ -286,6 +291,71 @@ header nav ul li a {
 
 header nav ul li a:hover {
   color: #ffc800;
+}
+
+header nav ul li .dropdown {
+  position: absolute;
+  top: 50px;
+  left: -130px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  max-width: 373px;
+  background-color: #ffffff;
+  border-radius: 6px;
+  padding: 4rem;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+header nav ul li .dropdown.active {
+  opacity: 1;
+  pointer-events: all;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+header nav ul li .dropdown::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 293px;
+  height: 5px;
+  background: #ffc800;
+  border-radius: 12px 12px 0 0;
+}
+
+header nav ul li .dropdown .item {
+  cursor: pointer;
+}
+
+header nav ul li .dropdown .item:not(:last-child) {
+  margin-bottom: 2.8rem;
+}
+
+header nav ul li .dropdown .item:hover strong {
+  color: #0073ce;
+}
+
+header nav ul li .dropdown .item strong {
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 1.9rem;
+  color: #5f5c6b;
+  display: block;
+  margin-bottom: 4px;
+  -webkit-transition: color .3s;
+  transition: color .3s;
+}
+
+header nav ul li .dropdown .item p {
+  font-size: 1.4rem;
+  line-height: 150%;
+  color: #7a7786;
 }
 
 header .btn-mobile {
