--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,15 +1,58 @@
 header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 8.8rem;
   display: flex;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
-  z-index: 5;
+  z-index: 999;
+  transition: all .3s;
 
   .container {
     @include flex(row, center, space-between);
+  }
+  
+  &.fixed-menu {
+    background-color: $white;
+    box-shadow: 0 0 30px 0 $gray-200;
+
+    .logo {
+      background-image: url("../../img/logo-neon-color.svg");
+    }
+
+    nav {
+      ul{
+        li{
+          a{
+            color: $gray-400;
+
+            &:hover {
+              color: $brand-blue-light;
+            }
+          }
+        }
+      }
+
+      .btn-secondary {
+        color: $brand-blue-light;
+        border: 1px solid $brand-blue-light;
+
+        &:hover {
+          background-color: $brand-blue-light;
+          color: $white;
+        }
+      }
+    }
+  }
+
+  .logo {
+    display: inline-block;
+    width: 132px;
+    height: 30px;
+    background: url("../../img/logo.svg") no-repeat center center;
+    background-size: 100%;
+    transition: background-image .3s;
   }
 
   nav {
@@ -22,7 +65,7 @@ header {
 
       li {
         position: relative;
-        
+
         &:not(:first-child) {
           margin-left: 4.8rem;
         }
@@ -34,7 +77,7 @@ header {
           line-height: 125%;
           color: $white;
 
-          transition: 0.3s;
+          transition: color 0.3s;
 
           &:hover {
             color: $brand-yellow;
@@ -48,6 +91,7 @@ header {
           width: max-content;
           max-width: 373px;
           background-color: $white;
+          box-shadow: 0 0 30px 0 $gray-200;
           border-radius: 6px;
           padding: 4rem;
           opacity: 0;
