--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -7,12 +7,12 @@ header {
   display: flex;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
   z-index: 999;
-  transition: all .3s;
+  transition: all 0.3s;
 
   .container {
     @include flex(row, center, space-between);
   }
-  
+
   &.fixed-menu {
     background-color: $white;
     box-shadow: 0 0 30px 0 $gray-200;
@@ -22,9 +22,9 @@ header {
     }
 
     nav {
-      ul{
-        li{
-          a{
+      ul {
+        li {
+          a {
             color: $gray-400;
 
             &:hover {
@@ -43,6 +43,10 @@ header {
           color: $white;
         }
       }
+
+      .btn-mobile img {
+        filter: sepia(100%) hue-rotate(95deg) saturate(900%) brightness(0.8);
+      }
     }
   }
 
@@ -52,7 +56,7 @@ header {
     height: 30px;
     background: url("../../img/logo.svg") no-repeat center center;
     background-size: 100%;
-    transition: background-image .3s;
+    transition: background-image 0.3s;
   }
 
   nav {
@@ -97,14 +101,14 @@ header {
           opacity: 0;
           pointer-events: none;
           transform: translateY(20px);
-          transition: all .3s;
-    
+          transition: all 0.3s;
+
           &.active {
             opacity: 1;
-            pointer-events: all;  
+            pointer-events: all;
             transform: translateY(0);
           }
-    
+
           &::after {
             content: "";
             position: absolute;
@@ -114,20 +118,20 @@ header {
             background: $brand-yellow;
             border-radius: 12px 12px 0 0;
           }
-    
+
           .item {
             cursor: pointer;
-            
+
             &:not(:last-child) {
               margin-bottom: 2.8rem;
             }
-    
+
             &:hover {
               strong {
                 color: $brand-blue;
               }
             }
-    
+
             strong {
               font-weight: 600;
               font-size: 1.6rem;
@@ -135,9 +139,9 @@ header {
               color: $gray-400;
               display: block;
               margin-bottom: 4px;
-              transition: color .3s;
+              transition: color 0.3s;
             }
-    
+
             p {
               font-size: 1.4rem;
               line-height: 150%;
@@ -191,6 +195,69 @@ header {
       .btn-secondary {
         display: none;
       }
+    }
+  }
+}
+
+.menu-mobile {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s;
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  aside {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 75%;
+    height: 100%;
+    background-color: $white;
+    padding: 3rem;
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+
+    .logo {
+      max-width: 15rem;
+      margin-bottom: 4rem;
+    }
+
+    ul {
+      li {
+        a {
+          padding: 1.5rem 0;
+          display: block;
+          font-size: 1.8rem;
+          color: $gray-400;
+        }
+      }
+    }
+  }
+}
+
+.menu-opened {
+  overflow: hidden;
+
+  .menu-mobile {
+    opacity: 1;
+    pointer-events: all;
+
+    aside {
+      transform: translateX(0%);
     }
   }
 }
