--- a/scss/styles.css
+++ b/scss/styles.css
@@ -237,8 +237,8 @@ header {
   display: flex;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
   z-index: 999;
-  -webkit-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 header .container {
@@ -285,14 +285,19 @@ header.fixed-menu nav .btn-secondary:hover {
   color: #ffffff;
 }
 
+header.fixed-menu nav .btn-mobile img {
+  -webkit-filter: sepia(100%) hue-rotate(95deg) saturate(900%) brightness(0.8);
+          filter: sepia(100%) hue-rotate(95deg) saturate(900%) brightness(0.8);
+}
+
 header .logo {
   display: inline-block;
   width: 132px;
   height: 30px;
   background: url("../../img/logo.svg") no-repeat center center;
   background-size: 100%;
-  -webkit-transition: background-image .3s;
-  transition: background-image .3s;
+  -webkit-transition: background-image 0.3s;
+  transition: background-image 0.3s;
 }
 
 header nav {
@@ -350,8 +355,8 @@ header nav ul li .dropdown {
   pointer-events: none;
   -webkit-transform: translateY(20px);
           transform: translateY(20px);
-  -webkit-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 header nav ul li .dropdown.active {
@@ -390,8 +395,8 @@ header nav ul li .dropdown .item strong {
   color: #5f5c6b;
   display: block;
   margin-bottom: 4px;
-  -webkit-transition: color .3s;
-  transition: color .3s;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 header nav ul li .dropdown .item p {
@@ -433,6 +438,71 @@ header .btn-mobile {
   header nav .btn-secondary {
     display: none;
   }
+}
+
+.menu-mobile {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.menu-mobile .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-mobile aside {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 75%;
+  height: 100%;
+  background-color: #ffffff;
+  padding: 3rem;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.menu-mobile aside .logo {
+  max-width: 15rem;
+  margin-bottom: 4rem;
+}
+
+.menu-mobile aside ul li a {
+  padding: 1.5rem 0;
+  display: block;
+  font-size: 1.8rem;
+  color: #5f5c6b;
+}
+
+.menu-opened {
+  overflow: hidden;
+}
+
+.menu-opened .menu-mobile {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.menu-opened .menu-mobile aside {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
 }
 
 footer {
