--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -19,7 +19,7 @@ header {
     box-shadow: 0 0 30px 0 $gray-200;
 
     .logo {
-      background-image: url("../../img/logo-neon-color.svg");
+      background-image: url("../../img/logo-bone-color.svg");
     }
 
     nav {
@@ -54,7 +54,7 @@ header {
   .logo {
     display: inline-block;
     width: 132px;
-    height: 30px;
+    height: 38px;
     background: url("../../img/logo.svg") no-repeat center center;
     background-size: 100%;
     transition: background-image 0.3s;
