--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -285,7 +285,7 @@
   }
 }
 
-.s-card-neon {
+.s-card-bone {
   padding-top: 12.9rem;
 
   .container {
@@ -429,7 +429,7 @@
     .box-card {
       width: 100%;
       height: 41rem;
-      background: url(../../img/bg-box-card-neon.svg) no-repeat center center;
+      background: url(../../img/bg-box-card-bone.svg) no-repeat center center;
       border-radius: 12px;
       @include flex(row, center, space-between);
       padding-left: 5.9rem;
